# srs

./: LICENSE  README.md  flash-cards.cabal  srs.cabal  zgy.cabal
script/: test
src/: Database.hs  Display.hs  List.hs  ListDatabase.hs  Main.hs  Srs.hs  SrsDatabase.hs
test/: DisplaySpec.hs
