name:                flash-cards
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable flash-cards
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
