name:                zgy
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable zgy
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
               ,       optparse-applicative == 0.11.0.2
               ,       directory            == 1.2.1.0
               ,       filepath             == 1.3.0.1
               ,       strict               == 0.3.2
               ,       time                 == 1.5.0.1
               ,       safe                 == 0.3.8
               ,       hspec                == 2.1.5
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -fno-warn-unused-binds
  hs-source-dirs:      src
  default-language:    Haskell2010
